workshop/demo-nodejs/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-nodejs
  labels:
    name: demo-nodejs
