workshop/demo-nodejs/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: demo-nodejs
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    name: http
  type: ClusterIP
